0.58 2024-10-08
        - Fix meta table view for key value pairs (diewald)

0.57 2024-10-08
        - Support VCs via URL without queries (diewald)
        - Added translations for regexp and FCSQL (r-wilm)
        - Introduce 'ui-ready' global event (diewald)
        - Don't show random page option for single page
          results (diewald)
        - Move page to top after click on example queries (diewald)
        - Disable sidebar via stash (diewald)
        - Change malt/d for relation default in tour (kupietz)
        - Use 'pubDate eq 2018' as VC example in tour (kupietz)
        - Fix tour when started from a non-root path (hebasta)

0.56 2024-09-23
        - Improve slim test for plugin support
          (korapxml2...; diewald)
        - Fix layerInfo retrieval for relation view. (diewald)
        - Change look of addon logo. (diewald)

0.55 2024-07-03
        - Removed deprecated doc_link_to helper. (diewald)
        - Removed deprecated doc_ext_link_to helper. (diewald)
        - Removed deprecated doc_uc helper. (diewald)
        - Removed deprecated doc_navi helper. (diewald)
        - Removed deprecated doc->url helper. (diewald)
        - Correctly propagate warnings in frontend calls. (diewald)
        - Remove corpusQuery from statistics
          (as per Kudstvakt #758). (diewald)
        - Improve test suite for slim images. (diewald)
        - Add pages to references in snippet view. (diewald)
        - Added category to Piwik calls. (diewald)
        - Add SpaCy with STTS to annotation assistant. (diewald)
        - Support field objects in search responses. (diewald)
        - Add fields to search API (necessary
          for future Kustvakt releases). (diewald)

0.54 2024-06-10
        - Remove deprecated 'matchInfo' API path. (diewald, margaretha)
        - Improve footer responsiveness. (diewald)

        WARNING: This change requires at least Kustvakt v0.61.6.

0.53 2024-05-04
        - Add openapi url to documentation. (hebasta)