@@ -1,5 +1,6 @@
 0.58 2024-10-08
         - Fix meta table view for key value pairs (diewald)
+        - Fix warning on OAuth public clients (diewald)
 
 0.57 2024-10-08
         - Support VCs via URL without queries (diewald)
